examples/test/testpolicy12180.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12180
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key23: value12
      key43: value28
      key46: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
      podSelector:
        matchLabels:
          key37: value36
          key14: value46
          key33: value0
